<resources>
    <string name="app_name">FuttApp</string>

    //login

    <string name="hint_email">Correo Electronico</string>
    <string name="hint_password">Contraseña</string>
    <string name="bt_registro">Registrar</string>
    //botones

    <string name="bt_ingresar">Ingresar</string>
    <string name="bt_crearCuenta">Crear Cuenta</string>
    <string name="tv_ForgotPass"><u>Olvide la contraseña</u></string>

    //princial room
    <string name="navigation_open">Open</string>
    <string name="navigation_close">Close</string>
    <string name="title_activity_principal_room">PrincipalRoom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bt_cerrar_sesion">Cerrar Sesion</string>
    <string name="eT_mensaje">Escribe un mensaje</string>
    <string name="bt_enviar">Enviar</string>
    <string name="menu_futbol">Futbol</string>
    <string name="menu_voley">Voley</string>
    <string name="menu_basquet">Basquet</string>
    <string name="correo_dev">johanblas60@gmail.com</string>
    <string name="item_settings">Ajustes</string>

    <string name="fg_title_futbol">Futbol</string>

    <string name="menu_locales">Locales Deportivos</string>

</resources>