<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoprincipal"
    tools:context=".Activity.LoginActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="305dp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@android:dimen/thumbnail_height"
        android:text="@string/app_name"
        android:textColor="#F30606"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/idCorreoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="1234567"
        android:ems="15"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#BC000000"
        tools:layout_editor_absoluteY="227dp" />

    <EditText
        android:id="@+id/idContraseñaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="ejemplo@ejemplo.com"
        android:ems="15"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#C3000000"
        android:textColorLink="#000000" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/tv_ForgotPass"
        android:textColor="#B4000000" />

    <Button
        android:id="@+id/idLoginLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bt_ingresar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/idRegistroLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bt_registro"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>